Fixed gap on stats

--- a/content/assets/css/stats.css
+++ b/content/assets/css/stats.css
@@ -217,7 +217,6 @@ html, body{
   .stat3{
     text-align: center;
     margin-top: 2%;
-    padding-left: 0.5%;
     border-radius: 16px;
     color: #c4c4c4;
     font-size: 17px;
@@ -364,7 +363,6 @@ html, body{
     .stat3{
       text-align: center;
       margin-top: 7px;
-      padding-left: 0.5%;
       border-radius: 16px;
       color: #c4c4c4;
       font-size: 17px;
